src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>ACT_Composite__c</fullName>
        <label>ACT Composite</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Programs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Applications (Academic Program)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Success__c</fullName>
        <label>zzAcademic Success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Accuracy__c</fullName>
        <description>From EASY Application</description>
        <label>zzAcknowledgement-Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acknowledgement_Promotions_Waiver__c</fullName>
        <description>From EASY Application</description>
        <label>zzAcknowledgement-Promotions Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acknowledgement_Rights_Waiver__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Waive right to Recommendation</inlineHelpText>
        <label>Acknowledgement-Rights Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Application_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission Application Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Admissions Application Types</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Applications (Admission Application Type)</relationshipLabel>
        <relationshipName>Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admission_Decision_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission Decision Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Admission Decision Types</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Applications (Admission Decision Type)</relationshipLabel>
        <relationshipName>Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admission_Decision__c</fullName>
        <label>Admission Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Admission_Decision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Population__c</fullName>
        <description>Defines the structure for information about categories of admission populations for prospective students</description>
        <label>zzAdmission Population</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambition__c</fullName>
        <label>zzAmbition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_English_Test_Date__c</fullName>
        <description>From EASY Application</description>
        <label>zzAnticipated English Test Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Enrollment_Status__c</fullName>
        <description>Time enrollment status part/full time</description>
        <inlineHelpText>Colleague Course Load</inlineHelpText>
        <label>Anticipated Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full time</fullName>
                </value>
                <value>
                    <fullName>Part time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anticipated_Test_Date__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>What date do you plan to take an entrance exam?</inlineHelpText>
        <label>zzAnticipated Test Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Fee_Payment_Method__c</fullName>
        <label>zzApp Fee Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Cheque or money order (payable to Briercrest College and Seminary)</fullName>
                </value>
                <value>
                    <fullName>Not ready to pay at this time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <description>Type of applicant this is.</description>
        <inlineHelpText>Admit Type in Colleague</inlineHelpText>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Comments__c</fullName>
        <description>For integration</description>
        <inlineHelpText>Do not use, for integration only</inlineHelpText>
        <label>Application Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Control</label>
        <referenceTo>Application_Control__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Decision_Sent_to_Colleague__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application Decision Sent to Colleague</description>
        <label>Application Decision Sent to Colleague</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Folder_Status__c</fullName>
        <description>This field is for Academic Services and gives visibility into where an application is in the decision-making process</description>
        <inlineHelpText>Status used for decision-making process</inlineHelpText>
        <label>Application Folder Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application in Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Review Cancelled</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Review on Hold</fullName>
                </value>
                <value>
                    <fullName>Review Pending More Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_Elsewhere__c</fullName>
        <description>From EASY Application</description>
        <label>zzApplied Elsewhere?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aptitude__c</fullName>
        <label>zzAptitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Attitude__c</fullName>
        <label>zzAttendance Attitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Other_College__c</fullName>
        <description>Custom field from EASY Application</description>
        <inlineHelpText>Have you attended other colleges for credit?</inlineHelpText>
        <label>Attended Other College?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Which campus site the applicant is applying to attend</description>
        <label>zzCampus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main Campus</fullName>
                </value>
                <value>
                    <fullName>Satelite Campus</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_Not_Altered__c</fullName>
        <description>Custom field to store response from application</description>
        <label>Certified-Not Altered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>zzChange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>Citizenship of the applicant.</description>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Rank__c</fullName>
        <description>From EASY application</description>
        <label>zzClass Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_Comment__c</fullName>
        <description>Explanation on the reason for creating the application record clone</description>
        <label>Clone Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clone_Count__c</fullName>
        <description>The number of times an application has been cloned</description>
        <label>Clone Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conviction_Description__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Describe the situation surrounding your arrest/conviction:</inlineHelpText>
        <label>Conviction Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conviction__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Have you ever been arrested for or convicted of a crime?</inlineHelpText>
        <label>Conviction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <description>List of countries, where applicant is citizen</description>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cultural_Attitude__c</fullName>
        <label>zzCultural Attitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_GPA__c</fullName>
        <description>From EASY application</description>
        <label>Cumulative GPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Immigration_Visa_Status__c</fullName>
        <description>Applicants visa type</description>
        <label>Current Immigration Visa Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange Visitor (J-1)</fullName>
                </value>
                <value>
                    <fullName>Exchange Visitor Dependent (J-2)</fullName>
                </value>
                <value>
                    <fullName>Fiance (K)</fullName>
                </value>
                <value>
                    <fullName>Foreign Business (L)</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident (Green Card)</fullName>
                </value>
                <value>
                    <fullName>Religious Work (R)</fullName>
                </value>
                <value>
                    <fullName>Student (F-1)</fullName>
                </value>
                <value>
                    <fullName>Student Dependent (F-2)</fullName>
                </value>
                <value>
                    <fullName>Visitor (B)</fullName>
                </value>
                <value>
                    <fullName>Work (H)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <description>Custom field to store response from application</description>
        <label>Currently Employed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Enrolled__c</fullName>
        <description>Custom field from application</description>
        <label>Currently Enrolled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>From guidance counselor</description>
        <inlineHelpText>Guidance counselor school report date</inlineHelpText>
        <label>zzDate Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Blended</fullName>
                </value>
                <value>
                    <fullName>On-Campus</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>ONU</fullName>
                </value>
                <value>
                    <fullName>Scott Air force Base</fullName>
                    <isActive>false</isActive>
                    <label>Scott Air force Base</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Type of delivery the student prefers.</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <description>For EASY application</description>
        <label>Denomination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Comments__c</fullName>
        <description>From EASY Application</description>
        <label>Disability Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <description>From EASY Application</description>
        <label>Disability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Application_Status__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Decision_Codes__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Decision Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Delivery_Location__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Delivery Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Lead_Source__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Residency__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Residency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Withdrawal_Reason__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Withdrawal Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Decision__c</fullName>
        <description>From EASY application</description>
        <inlineHelpText>Early decision agreement</inlineHelpText>
        <label>zzEarly Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educational_Background__c</fullName>
        <label>Educational Background</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>AdultFreshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Email__c</fullName>
        <label>zzEmergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_First_Name__c</fullName>
        <label>zzEmergency Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Last_Name__c</fullName>
        <label>zzEmergency Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>zzEmergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>zzEmergency Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Coworker</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Grandson</fullName>
                </value>
                <value>
                    <fullName>Granddaughter</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Advisee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zzEmergency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Emergency Contact)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <label>zzEngagement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Proficiency_Test__c</fullName>
        <label>English Proficiency Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOEFL</fullName>
                </value>
                <value>
                    <fullName>IELTS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entry Term</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Periods</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exam_Taken_English_Proficiency__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>What English proficiency exam did you take?</inlineHelpText>
        <label>Exam Taken-English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOEFL</fullName>
                </value>
                <value>
                    <fullName>IELTS</fullName>
                </value>
                <value>
                    <fullName>Both TOEFL and IELTS</fullName>
                </value>
                <value>
                    <fullName>I haven&apos;t yet taken an English proficiency exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Taken_Freshman__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>What entrance exam did you take?</inlineHelpText>
        <label>zzExam Taken-Freshman</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>Both ACT and SAT</fullName>
                </value>
                <value>
                    <fullName>I haven&apos;t yet taken an entrance exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Taken_Grad__c</fullName>
        <description>From EASY application</description>
        <inlineHelpText>What entrance exam did you take?</inlineHelpText>
        <label>zzExam Taken-Grad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GMAT</fullName>
                </value>
                <value>
                    <fullName>Both GRE and GMAT</fullName>
                </value>
                <value>
                    <fullName>I haven&apos;t yet taken an entrance exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_GUID__c</fullName>
        <description>Contains the external guid for Recruit, Colleague or other external sources</description>
        <externalId>true</externalId>
        <label>External GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <description>Auto generated reference ID from ellucian</description>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Waiver__c</fullName>
        <description>From EASY application</description>
        <label>zzFee Waiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Name__c</fullName>
        <description>From EASY Application</description>
        <label>zzFormer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMAT_Score__c</fullName>
        <description>EASY Application</description>
        <label>GMAT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA_Major__c</fullName>
        <description>For EASY</description>
        <inlineHelpText>Use only numbers, no letters</inlineHelpText>
        <label>GPA-Major</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPA_Weighting__c</fullName>
        <description>From EASY application</description>
        <label>GPA Weighting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRE_Score__c</fullName>
        <description>EASY Application</description>
        <label>GRE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>